fix: scrolling on ios

--- a/static/code/css/ubq.css
+++ b/static/code/css/ubq.css
@@ -1175,6 +1175,7 @@ div#down-arrow-wrapper {
   /* height: 100%; */
   /* top: 0; */
   transform: translateY(-50%);
+  -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
   border: 1px solid #202020;
   border-width: 1px 0;
